fix: name hidden due to overflow

--- a/src/components/Home/components/Hero/Hero.module.css
+++ b/src/components/Home/components/Hero/Hero.module.css
@@ -37,6 +37,7 @@
 }
 
 .nameText {
+  padding-bottom: 8px;
   animation: slide-down 0.7s both;
   animation-delay: calc(var(--banner-delay) + 0.1s);
 }
